--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-theme: minima 
+theme: time-machine 
 author: Meghan Spencer
 title: Hub of The Dead
 font: typerwriter-oldstyle
+image: C:\Users\magic\OneDrive\Documents\University Assignments\Assignment Photos\blog banner.jpg 
